mega-repo/assets/github/repos/ethereum/solidity/test/libsolidity/syntaxTests/abiEncoder/selected_twice.sol
pragma abicoder v1;
pragma abicoder v1;
// ----
// Warning 9511: (0-19): ABI coder v1 is deprecated and scheduled for removal. Use ABI coder v2 instead.
// SyntaxError 3845: (20-39): ABI coder has already been selected for this source unit.
// Warning 9511: (20-39): ABI coder v1 is deprecated and scheduled for removal. Use ABI coder v2 instead.
